@@ -8,6 +8,7 @@ orx 1.1 rc0
 * Added orxCrypt command line tool for merging/encrypting/decrypting config files
 * Added owner to spawner structure + all missing accessors for runtime handling
 * IMPORTANT: Renamed spawner's WaveNumber property to WaveSize
+* Fixed child orxFRAME child calculation when using anisotropic scale on parent
 * Removed AutoDelete property for spawners
 * Added orxObject_GetChild() / orxObject_GetSibling() for querying dependencies (for objects created through config's ChildList property only)
 * Fixed config block value incorrectly saved by orxConfig_Save()
